Controller and changes for magazines.
